[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["schahrom <schahrom1232939@gmail.com>"]
readme = "README.md"
packages = [
    {include = "brain_games"}
]


[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
asciinema = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
brain_games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
